Bug 697745: zero denseStart when denseArray emptied (r=lhansen).